# text-mining

./: pyproject.toml
text_mining/: ex01.py
text_mining/.ipynb_checkpoints/: ex01-checkpoint.ipynb
text_mining/ex02/: ex02.py
text_mining/ex02/data/: get_books.py
text_mining/ex02/data/de/: 01_6975.txt  02_6996.txt  03_7276.txt  04_9875.txt  05_7185.txt  06_6990.txt  07_6924.txt  08_2229.txt  09_2403.txt  10_2228.txt
text_mining/ex02/data/fr/: 01_13868.txt  02_18143.txt  03_15032.txt  04_15847.txt  05_18179.txt  06_15303.txt  07_26759.txt  08_54202.txt  09_10604.txt  10_17509.txt
text_mining/ex03/: ex03.py
text_mining/ex03/data/: enchiridion.txt
text_mining/ex04/: crime-and-punishment.txt  ex04.py  letters-from-stoic.txt
text_mining/ex05/: ex05.py
text_mining/ex06/: ex06.py
text_mining/ex06/data/: dumas-daughter.txt  dumas-musketeers.txt  dumas-tulip.txt
